# Cmake_Project

Cmake/: CMakeLists.txt  CMakeProject1.cpp
Cmake/include/: mylib.h
Cmake/src/: mylib.cpp
